--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Animación de anuncio de embarazo tipo caja sorpresa." />
+    <meta name="description" content="Animación hecha en HTML/CSS/JS." />
     <title>Abre la Caja</title>
     <style>
       body {
@@ -103,7 +101,9 @@
   </head>
   <body>
     <div class="box-container">
-      <div class="box" onclick="openBox()">🎁 ¡Abre tu sorpresa!</div>
+      <div class="box" onclick="openBox()">
+        🎁 ¡Abre la caja y mira la sorpresa!
+      </div>
       <div class="surprise-content">
         <img src="bebito.jpeg" alt="¡Sorpresa!" />
 
