--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         🎁 ¡Abre la caja y mira la sorpresa!
       </div>
       <div class="surprise-content">
-        <img src="bebito.jpeg" alt="¡Sorpresa!" />
+        <img src="bebito2.jpeg" alt="¡Sorpresa!" />
 
         <h3>¡Sorpresa! 🎉</h3>
         <p>Estamos esperando un bebé 🍼</p>
